Fixed software spelling, fix mobile lang tool spacing issue

--- a/src/components/container/container.module.scss
+++ b/src/components/container/container.module.scss
@@ -6,7 +6,7 @@
 }
 
 .langTool {
-    position: absolute;
+    position: fixed;
     right: 2rem;
     top: 1rem;
     z-index: 9998;
@@ -28,6 +28,8 @@
         font-size: 1.2rem;
         cursor: pointer;
         transition: border 0.3s cubic-bezier(.82, .1, .14, 2.12);
+        text-align: center;
+        padding: 0;
 
         &:disabled {
             opacity: 0.7;
